# claude-fullstack-tanstack-python-starter

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  package.json  pyproject.toml
apps/api/src/: main.py
apps/api/tests/: test_main.py
apps/web/: package.json
apps/web/src/styles/: app.css
scripts/: README.template.md  setup.mjs
